[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://actors/AnnouncementOverlay/AnnouncementOverlay.gd" type="Script" id=2]
[ext_resource path="res://sounds/bullet_hell.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="AnnouncementOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AnnouncementDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="Panel" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.923077 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="AnnouncementLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -13.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "[Game mode title]"
align = 1
valign = 1

[node name="AnnouncementLabelHeader" type="Label" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -28.0
margin_bottom = -9.0
custom_colors/font_color = Color( 0.807843, 0.807843, 0.807843, 1 )
custom_fonts/font = SubResource( 5 )
text = "NEXT UP"
align = 1
valign = 1

[node name="PanelAnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
anims/idle = SubResource( 2 )

[node name="AnnouncementAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0

[connection signal="timeout" from="AnnouncementDurationTimer" to="." method="_on_AnnouncementDurationTimer_timeout"]
[connection signal="animation_finished" from="PanelAnimationPlayer" to="." method="_on_PanelAnimationPlayer_animation_finished"]
